# MCMAS-Extension

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: autonomousrobot.sispl  fulltree.sispl  globalloop.sispl
include/: AbstractAgent.hpp  AgentState.hpp  BaseType.hpp  Evaluation.hpp  EvaluationLine.hpp  Evolution.hpp  EvolutionLine.hpp  PBoolCondition.hpp  Protocol.hpp  ProtocolLine.hpp  SwarmAgent.hpp  SwarmSystem.hpp
include/expressions/: Expression.hpp  Expressions.hpp  Operator.hpp  Operators.hpp  Operators2.hpp  Visitor.hpp
include/formulas/: Formula.hpp  IndexedFormula.hpp
include/parser/: parser.hpp  pegtl.hpp
include/utils/: DeepPtr.hpp  DynamicBitset.hpp  Misc.hpp  Overload.hpp
include/visitors/: ApplyVisitor.hpp  EvalVisitor.hpp  FormulaOwnerReplaceVisitor.hpp  FormulaStringVisitor.hpp  FormulaTDVisitor.hpp  FormulaVisitor.hpp  GlobalActionVisitor.hpp  LocalActionVisitor.hpp  OwnerActionVisitor.hpp  OwnerReplaceVisitor.hpp  StringVisitor.hpp  SubstVisitor.hpp  Visitor.hpp
src/: AbstractAgent.cpp  AgentState.cpp  BaseType.cpp  Evaluation.cpp  EvaluationLine.cpp  Evolution.cpp  EvolutionLine.cpp  Protocol.cpp  ProtocolLine.cpp  SwarmAgent.cpp  SwarmSystem.cpp  main.cpp
src/expressions/: Expression.cpp  Expressions.cpp  Visitor.cpp
src/formulas/: Formula.cpp  IndexedFormula.cpp
src/visitors/: FormulaVisitor.cpp  Visitor.cpp
test/tests/: EmptyTest.cpp
